--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -22,6 +22,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "apexcharts": "^3.49.1",
     "classnames": "^2.5.1",
+    "firebase": "^11.8.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
