--- a/typescript-version/firebase.json
+++ b/typescript-version/firebase.json
@@ -1,10 +1,30 @@
 {
   "hosting": {
-    "public": "materio_dashboardadmin",
+    "public": ".next/out",
     "ignore": [
-      "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "**/.next/cache/**"
+    ],
+    "headers": [
+      {
+        "source": "/_next/static/(.*)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
+        "source": "/service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
     ],
     "rewrites": [
       {
