--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -23,6 +23,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "apexcharts": "^3.49.1",
     "classnames": "^2.5.1",
+    "default-connector": "link:../../../../AppData/Local/pnpm/global/5/node_modules/dataconnect-generated/js/default-connector",
     "firebase": "^11.8.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
